@@ -2309,7 +2309,6 @@ class Nikola(object):
         context["lang"] = lang
         context["prevlink"] = None
         context["nextlink"] = None
-        context["is_feed_stale"] = None
         context.update(extra_context)
         deps_context = copy(context)
         deps_context["posts"] = [(p.meta[lang]['title'], p.permalink(lang)) for p in
@@ -2324,11 +2323,8 @@ class Nikola(object):
 
         deps_context['navigation_links'] = deps_context['global']['navigation_links'](lang)
 
-        nslist = {}
-        if context["is_feed_stale"] or "feedpagenum" in context and (not context["feedpagenum"] == context["feedpagecount"] - 1 and not context["feedpagenum"] == 0):
-            nslist["fh"] = "http://purl.org/syndication/history/1.0"
         feed_xsl_link = self.abs_link("/assets/xml/atom.xsl")
-        feed_root = lxml.etree.Element("feed", nsmap=nslist)
+        feed_root = lxml.etree.Element("feed")
         feed_root.addprevious(lxml.etree.ProcessingInstruction(
             "xml-stylesheet",
             'href="' + utils.encodelink(feed_xsl_link) + '" type="text/xsl media="all"'))
@@ -2345,25 +2341,6 @@ class Nikola(object):
         feed_author_name.text = self.config["BLOG_AUTHOR"](lang)
         feed_root.append(atom_link("self", "application/atom+xml",
                                    self.abs_link(context["feedlink"])))
-        # Older is "next" and newer is "previous" in paginated feeds (opposite of archived)
-        if "nextfeedlink" in context:
-            feed_root.append(atom_link("next", "application/atom+xml",
-                                       self.abs_link(context["nextfeedlink"])))
-        if "prevfeedlink" in context:
-            feed_root.append(atom_link("previous", "application/atom+xml",
-                                       self.abs_link(context["prevfeedlink"])))
-        if context["is_feed_stale"] or "feedpagenum" in context and not context["feedpagenum"] == 0:
-            feed_root.append(atom_link("current", "application/atom+xml",
-                             self.abs_link(context["currentfeedlink"])))
-            # Older is "prev-archive" and newer is "next-archive" in archived feeds (opposite of paginated)
-            if "prevfeedlink" in context and (context["is_feed_stale"] or "feedpagenum" in context and not context["feedpagenum"] == context["feedpagecount"] - 1):
-                feed_root.append(atom_link("next-archive", "application/atom+xml",
-                                           self.abs_link(context["prevfeedlink"])))
-            if "nextfeedlink" in context:
-                feed_root.append(atom_link("prev-archive", "application/atom+xml",
-                                           self.abs_link(context["nextfeedlink"])))
-            if context["is_feed_stale"] or "feedpagenum" and not context["feedpagenum"] == context["feedpagecount"] - 1:
-                lxml.etree.SubElement(feed_root, "{http://purl.org/syndication/history/1.0}archive")
         feed_root.append(atom_link("alternate", "text/html",
                                    self.abs_link(context["permalink"])))
         feed_generator = lxml.etree.SubElement(feed_root, "generator")
